--- a/flex.html
+++ b/flex.html
@@ -20,18 +20,18 @@
         </div>
     </header>
     <main>
-        <section>
-            <div>bolum1</div>
-            <div>bolum2</div>
-            <div>bolum3</div>
+        <section class="row container">
+            <div class="col-4 bolum1">BOLUM1</div>
+            <div class="col-4 bolum2">BOLUM2</div>
+            <div class="col-4 bolum3">BOLUM3</div>
         </section>
-        <section>
-            <div>bolum4</div>
-            <div>bolum5</div>
-            <div>bolum6</div>
+        <section class="row container section">
+            <div class="col-3">BOLUM4</div>
+            <div class="col-6">BOLUM5</div>
+            <div class="col-3">BOLUM6</div>
         </section>
     </main>
-    <footer>footer</footer>
+    <footer class="footer">FOOTER</footer>
 </body>
 
 </html>
